@@ -6498,6 +6498,11 @@ argument_list|)
 expr_stmt|;
 name|writer
 operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|writer
+operator|.
 name|close
 argument_list|()
 expr_stmt|;
