@@ -12093,6 +12093,272 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+comment|// LUCENE-3872
+DECL|method|testPrepareCommitThenClose
+specifier|public
+name|void
+name|testPrepareCommitThenClose
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|w
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+operator|new
+name|IndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|w
+operator|.
+name|prepareCommit
+argument_list|()
+expr_stmt|;
+try|try
+block|{
+name|w
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"should have hit exception"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalStateException
+name|ise
+parameter_list|)
+block|{
+comment|// expected
+block|}
+name|w
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|w
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|IndexReader
+name|r
+init|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|r
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+comment|// LUCENE-3872
+DECL|method|testPrepareCommitThenRollback
+specifier|public
+name|void
+name|testPrepareCommitThenRollback
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|w
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+operator|new
+name|IndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|w
+operator|.
+name|prepareCommit
+argument_list|()
+expr_stmt|;
+name|w
+operator|.
+name|rollback
+argument_list|()
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|DirectoryReader
+operator|.
+name|indexExists
+argument_list|(
+name|dir
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+comment|// LUCENE-3872
+DECL|method|testPrepareCommitThenRollback2
+specifier|public
+name|void
+name|testPrepareCommitThenRollback2
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|w
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+operator|new
+name|IndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|w
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|prepareCommit
+argument_list|()
+expr_stmt|;
+name|w
+operator|.
+name|rollback
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|DirectoryReader
+operator|.
+name|indexExists
+argument_list|(
+name|dir
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|IndexReader
+name|r
+init|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|r
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 
